[package]
name = "lattice-quota"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Quota controller for Lattice - enforces resource budgets at compile time"

[dependencies]
lattice-common = { workspace = true }
lattice-core = { workspace = true }
lattice-cache = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
