[package]
name = "lattice-secret-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SecretProvider controller for Lattice - manages Vault integration and ESO ClusterSecretStore"

[dependencies]
lattice-common = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }

# HTTP
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
