[package]
name = "lattice-secret-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SecretProvider controller for Lattice - manages Vault integration and ESO ClusterSecretStore"

[dependencies]
lattice-common = { workspace = true }
lattice-core = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }

# HTTP
axum = { workspace = true }

# Encoding
base64 = { workspace = true }

# Crypto (FIPS-validated RNG)
aws-lc-rs = { workspace = true }

# Crypto
subtle = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Security
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
